--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
+    "test:watch": "yarn run test -- --watch"
   },
   "repository": "https://github.com/Himmelen/thenothing-co-test-backend.git",
   "author": "Igor Markin",
@@ -15,9 +16,14 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
+    "chai": "^4.0.2",
+    "chai-jquery": "^2.0.0",
     "html-webpack-plugin": "^2.29.0",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0"
+    "jquery": "^3.2.1",
+    "jsdom": "^11.1.0",
+    "mocha": "^3.4.2",
+    "webpack": "2.6.1",
+    "webpack-dev-server": "2.4.5"
   },
   "dependencies": {
     "react": "^15.6.1",
