--- a/package.json
+++ b/package.json
@@ -26,9 +26,14 @@
     "webpack-dev-server": "2.4.5"
   },
   "dependencies": {
+    "history": "^4.6.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
-    "redux": "^3.7.1"
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "react-router-redux": "5.0.0",
+    "redux": "^3.7.1",
+    "redux-thunk": "^2.2.0"
   }
 }
