--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "babel-preset-stage-1": "^6.24.1",
     "chai": "^4.0.2",
     "chai-jquery": "^2.0.0",
-    "html-webpack-plugin": "^2.29.0",
     "jquery": "^3.2.1",
     "jsdom": "^11.1.0",
     "mocha": "^3.4.2",
@@ -26,6 +25,7 @@
     "webpack-dev-server": "2.4.5"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "history": "^4.6.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
