--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^4.1.1",
     "react-router-redux": "5.0.0",
     "redux": "^3.7.1",
+    "redux-form": "^6.8.0",
     "redux-thunk": "^2.2.0"
   }
 }
